--- a/Models/E2E/2021.12.04_YourTTS.md
+++ b/Models/E2E/2021.12.04_YourTTS.md
@@ -74,7 +74,7 @@ In parallel with the ZS-TTS, multilingual TTS has also evolved aiming at learnin
 Some of these models are particularly interesting as they allow for code-switching, i.e., changing the target language for some part of a sentence, while keeping the same voice \cite{nekvinda2020one}.
 This can be useful in ZS-TTS as it allows using of speakers from one language to be synthesized in another language.
 
-In this paper, we propose YourTTS with several novel ideas focused on zero-shot multi-speaker and multilingual training.
+In this paper, we propose ***YourTTS*** with several novel ideas focused on zero-shot multi-speaker and multilingual training.
 We report state-of-the-art zero-shot multi-speaker TTS results, as well as results comparable to SOTA in zero-shot voice conversion for the VCTK dataset.
 
 Our novel zero-shot multi-speaker TTS approach includes the following contributions:
@@ -101,7 +101,7 @@ For reproducibility, our source-code is available at the [Coqui TTS [Github]](ht
 
 <table><tr><td width="50%">
 
-YourTTS builds upon VITS \cite{kim2021conditional}, but includes several novel modifications for zero-shot multi-speaker and multilingual training.
+***YourTTS*** builds upon VITS \cite{kim2021conditional}, but includes several novel modifications for zero-shot multi-speaker and multilingual training.
 First, unlike previous work \cite{casanova2021sc, kim2021conditional}, in our model we used raw text as input instead of phonemes.
 This allows more realistic results for languages without good open-source grapheme-to-phoneme converters available.
 
@@ -118,7 +118,7 @@ As input, the Posterior Encoder receives a linear spectrogram and predicts a lat
 This allows the model to learn an intermediate representation; hence, it achieves superior results to a two-stage approach system in which the vocoder and the TTS model are trained separately \cite{kim2021conditional}.
 Furthermore, to enable our model to synthesize speech with diverse rhythms from the input text, we use the stochastic duration predictor proposed in \cite{kim2021conditional}.
 
-YourTTS during training and inference is illustrated in Figure~\ref{fig:generaltop}, where `++` indicates concatenation, red connections mean no gradient will be propagated by this connection, and dashed connections are optional.
+***YourTTS*** during training and inference is illustrated in Figure~\ref{fig:generaltop}, where `++` indicates concatenation, red connections mean no gradient will be propagated by this connection, and dashed connections are optional.
 We omit the Hifi-GAN discriminator networks for simplicity.
 
 To give the model zero-shot multi-speaker generation capabilities we condition all affine coupling layers of the flow-based decoder, the posterior encoder, and the vocoder on external speaker embeddings.
@@ -174,8 +174,8 @@ This model reached an average Equal Error Rate (EER) of 1.967 while the speaker 
 
 We investigated 3 languages, using one dataset per language to train the model.
 For all datasets, pre-processing was carried out in order to have samples of similar loudness and to remove long periods of silence.
-All the audios to 16Khz and applied voice activity detection (VAD) using Webrtcvad toolkit\footnote{https://github.com/wiseman/py-webrtcvad} to trim the trailing silences.
-Additionally, we normalized all audio to -27dB using the RMS-based normalization from the Python package ffmpeg-normalize\footnote{https://github.com/slhck/ffmpeg-normalize}.
+All the audios to 16Khz and applied voice activity detection (VAD) using [Webrtcvad toolkit [Github]](https://github.com/wiseman/py-webrtcvad) to trim the trailing silences.
+Additionally, we normalized all audio to -27dB using the RMS-based normalization from the Python package [ffmpeg-normalize [Github]](https://github.com/slhck/ffmpeg-normalize).
 
 </td><td>
 
@@ -208,7 +208,7 @@ For development we randomly selected 500 samples and the rest of the dataset was
 
 **French**
 
-fr\_FR set of the M-AILABS dataset \cite{mailabs}, which is based on LibriVox\footnote{https://librivox.org/}.
+fr\_FR set of the M-AILABS dataset \cite{mailabs}, which is based on [LibriVox [URL]](https://librivox.org/).
 It consists of 2 female (104h) and 3 male speakers (71h) sampled at 16KHz.
 
 </td><td>
@@ -230,7 +230,7 @@ Finally, for speaker adaptation experiments, to mimic a more realistic setting, 
 
 <table><tr><td width="50%">
 
-We carried out four training experiments with YourTTS:
+We carried out four training experiments with ***YourTTS***:
 - System 1: using VCTK dataset (monolingual);
 - System 2: using both VCTK and TTS-Portuguese datasets (bilingual);
 - System 3: using VCTK, TTS-Portuguese and M-AILABS french datasets (trilingual);
@@ -275,7 +275,7 @@ We also report the Similarity MOS (Sim-MOS) following the works of \cite{jia2018
 
 Although the experiments involve 3 languages, due to the high cost of the MOS metrics, only two languages were used to compute such metrics: English, which has the largest number of speakers, and Portuguese, which has the smallest number.
 In addition, following the work of \cite{casanova2021sc} we present such metrics only for speakers unseen during training.
-MOS scores were obtained with rigorous crowdsourcing\footnote{https://www.definedcrowd.com/evaluation-of-experience/}.
+MOS scores were obtained with [rigorous crowdsourcing [URL]](https://www.definedcrowd.com/evaluation-of-experience/).
 For the calculation of MOS and the Sim-MOS in the English language, we use 276 and 200 native English contributors, respectively.
 For the Portuguese language, we use 90 native Portuguese contributors for both metrics.
 
@@ -389,8 +389,8 @@ However, it should be noted that in our tests with high-quality reference sample
 <table><tr><td width="50%">
 
 As in the SC-GlowTTS \cite{casanova2021sc} model, we do not provide any information about the speaker’s identity to the encoder, so the distribution predicted by the encoder is forced to be speaker independent.
-Therefore, YourTTS can convert voices using the model’s Posterior Encoder, decoder and the HiFi-GAN Generator.
-Since we conditioned YourTTS with external speaker embeddings, it enables our model to mimic the voice of unseen speakers in a zero-shot voice conversion setting.
+Therefore, ***YourTTS*** can convert voices using the model’s Posterior Encoder, decoder and the HiFi-GAN Generator.
+Since we conditioned ***YourTTS*** with external speaker embeddings, it enables our model to mimic the voice of unseen speakers in a zero-shot voice conversion setting.
 
 In \cite{wang2021noisevc}, the authors reported the MOS and Sim-MOS metrics for the AutoVC \cite{qian2019autovc} and NoiseVC \cite{wang2021noisevc} models for 10 VCTK speakers not seen during training.
 To compare our results, we selected 8 speakers (4M/4F) from the VCTK test subset.
@@ -405,7 +405,7 @@ We calculate the MOS and the Sim-MOS as described in Section \ref{sec:results}.
 However, for the calculation of the sim-MOS when transferring between English and Portuguese (pt-en and en-pt), as the reference samples are in one language and the transfer is done in another language, we used evaluators from both languages (58 and 40, respectively, for English and Portuguese).
 
 Table \ref{tb:vc} presents the MOS and Sim-MOS for these experiments.
-Samples of the zero-shot voice conversion are present in the demo page\footnote{https://edresson.github.io/YourTTS/}.
+Samples of the zero-shot voice conversion are present in the [demo page](https://edresson.github.io/YourTTS/).
 
 </td><td>
 
@@ -418,11 +418,14 @@ Samples of the zero-shot voice conversion are present in the demo page\footnote{
 For zero-shot voice conversion from one English-speaker to another English-speaker (en-en) our model achieved a MOS of 4.20$\pm$0.05 and a Sim-MOS of 4.07$\pm$0.06.
 
 For comparison in \cite{wang2021noisevc} the authors reported the MOS and Sim-MOS results for the AutoVC \cite{qian2019autovc} and NoiseVC \cite{wang2021noisevc} models.
-For 10 VCTK speakers not seen during training, the AutoVC model achieved a MOS of $3.54\pm 1.08$\footnote{The authors presented the results in a graph without the actual figures, so the MOS scores reported here are approximations calculated considering the length in pixels of those graphs.} and a Sim-MOS of $1.91\pm 1.34$.
+For 10 VCTK speakers not seen during training, the AutoVC model achieved a MOS of $3.54\pm 1.08$  and a Sim-MOS of $1.91\pm 1.34$.
+
+Note: The authors presented the results in a graph without the actual figures, so the MOS scores reported here are approximations calculated considering the length in pixels of those graphs.
+
 On the other hand, the NoiseVC model achieved a MOS of $3.38\pm 1.35$ and a Sim-MOS of $3.05\pm 1.25$.
 Therefore, our model achieved results comparable to the SOTA in zero-shot voice conversion in the VCTK dataset.
 Alhtough the model was trained with more data and speakers, the similarity results of the VCTK dataset in Section \ref{sec:results} indicate that the model trained with only the VCTK dataset (experiment 1) presents a better similarity than the model explored in this Section (experiment 4).
-Therefore, we believe that YourTTS can achieve a result very similar or even superior in zero-shot voice conversion when being trained and evaluated using only the VCTK dataset.
+Therefore, we believe that ***YourTTS*** can achieve a result very similar or even superior in zero-shot voice conversion when being trained and evaluated using only the VCTK dataset.
 
 For zero-shot voice conversion from one Portuguese speaker to another Portuguese speaker our model achieved a MOS of 3.64 $\pm$ 0.09 and a Sim-MOS of 3.43 $\pm$ 0.09.
 
@@ -491,7 +494,7 @@ Finally, we also noticed that voice conversion improves significantly after fine
 
 <table><tr><td width="50%">
 
-In this work, we presented YourTTS, which achieved SOTA results in zero-shot multi-speaker TTS and zero-shot voice conversion in the VCTK dataset.
+In this work, we presented ***YourTTS***, which achieved SOTA results in zero-shot multi-speaker TTS and zero-shot voice conversion in the VCTK dataset.
 Furthermore, we show that our model can achieve promising results in a target language using only a single speaker dataset.
 Additionally, we show that for speakers who have both a voice and recording conditions that differ greatly from those seen in training, our model can be adjusted to a new voice using less than 1 minute of speech.
 
@@ -502,7 +505,7 @@ Unlike \cite{casanova2020ttsportuguese, casanova2020end, kim2021conditional}, we
 For Portuguese voice conversion, the speaker's gender significantly influences the model's performance, due to the absence of female voices in training.
 For Speaker Adaptation, although our model shows good results in copying the speaker's speech characteristics using only 20 seconds of speech, more than 45 seconds of speech are more adequate to allow higher quality.
 
-In future work, we intend to seek improvements to the duration predictor of the YourTTS model as well as training in more languages.
+In future work, we intend to seek improvements to the duration predictor of the ***YourTTS*** model as well as training in more languages.
 Furthermore, we intend to explore the application of this model for data augmentation in the training of automatic speech recognition models in low-resource settings.
 
 </td><td>
